--- a/src/frontend/parlai-app/angular.json
+++ b/src/frontend/parlai-app/angular.json
@@ -131,5 +131,10 @@
       }
     }
   },
-  "defaultProject": "parlai-app"
+  "defaultProject": "parlai-app",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
