added mallet_lda file for topic modelling

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ src/extras/document_dummy.xml
 src/backend/libs/spacy_ner\.py
 
 resources/topic-modelling-with-spacy-and-scikit-learn\.ipynb
+
+\.idea/
