new deployment config

--- a/src/backend/api/requirements.txt
+++ b/src/backend/api/requirements.txt
@@ -1,17 +1,27 @@
 atomicwrites==1.2.1
 attrs==18.2.0
 autopep8==1.4.3
+awsebcli==3.14.10
+blessed==1.15.0
 boto==2.49.0
 boto3==1.9.82
 botocore==1.12.82
 bz2file==0.98
+cached-property==1.5.1
+cement==2.8.2
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+colorama==0.3.9
 cycler==0.10.0
 cymem==2.0.2
 cytoolz==0.9.0.1
 dill==0.2.8.2
+docker==3.7.0
+docker-compose==1.23.2
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
 docutils==0.14
 Flask==1.0.2
 Flask-Cors==3.0.7
@@ -23,6 +33,7 @@ itsdangerous==1.1.0
 Jinja2==2.10
 jmespath==0.9.3
 joblib==0.13.1
+jsonschema==2.6.0
 kiwisolver==1.0.1
 lxml==4.3.0
 MarkupSafe==1.1.0
@@ -32,12 +43,13 @@ msgpack==0.5.6
 msgpack-numpy==0.4.3.2
 murmurhash==1.0.1
 mysql-connector-python==8.0.13
-nl-core-news-sm==2.0.0
+https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-2.0.0/nl_core_news_sm-2.0.0.tar.gz#nl_core_news_sm
 nltk==3.4
 numexpr==2.6.9
 numpy==1.16.0
 pandas==0.23.4
 -e git+https://github.com/jimichailidis/parlAI.git@dc0e206ab7676342acb0345e1759c1299c3be926#egg=parlai&subdirectory=src/backend
+pathspec==0.5.5
 plac==0.9.6
 pluggy==0.8.1
 preshed==2.0.1
@@ -49,19 +61,25 @@ pyparsing==2.3.1
 pytest==4.1.1
 python-dateutil==2.7.5
 pytz==2018.9
+PyYAML==3.13
 rake-nltk==1.0.4
 regex==2018.1.10
 requests==2.21.0
 s3transfer==0.1.13
 scipy==1.2.0
+semantic-version==2.5.0
 singledispatch==3.4.0.3
 six==1.12.0
 smart-open==1.8.0
 spacy==2.0.18
+termcolor==1.1.0
+texttable==0.9.1
 thinc==6.12.1
 toolz==0.9.0
 tqdm==4.29.1
 ujson==1.35
 urllib3==1.24.1
+wcwidth==0.1.7
+websocket-client==0.54.0
 Werkzeug==0.14.1
 wrapt==1.10.11
